Добавлены: ручка подтверждения / отклонения заявки в друзья, ручка удаления из друзей
